WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301969
[blocks-in-inline] Block level elements inside RTL are mispositioned
https://bugs.webkit.org/show_bug.cgi?id=301969
Summary
[blocks-in-inline] Block level elements inside RTL are mispositioned
alan
Reported
2025-11-04 14:59:06 PST
ssia
Attachments
Patch
(7.33 KB, patch)
2025-11-04 15:04 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.33 KB, patch)
2025-11-05 12:50 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-04 15:04:31 PST
Created
attachment 477295
[details]
Patch
alan
Comment 2
2025-11-05 12:50:51 PST
Created
attachment 477313
[details]
[fast-cq]Patch
EWS
Comment 3
2025-11-05 19:32:32 PST
Committed
302622@main
(85f34e134c43): <
https://commits.webkit.org/302622@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477313
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-11-05 19:33:12 PST
<
rdar://problem/164138390
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug