[blocks-in-inline] Block level elements inside RTL are mispositioned https://bugs.webkit.org/show_bug.cgi?id=301969

Reviewed by Antti Koivisto.

Adjust bidi codepath to support block level elements.

1. Treat block level elements as paragraph starts (ICU)
2. Set line bidi status when block is inside RTL
3. Add missing block handling to InlineDisplayContentBuilder::processBidiContent

Test: fast/inline/blocks-in-inline-layout4.html

* LayoutTests/fast/inline/blocks-in-inline-layout4-expected.html:
* LayoutTests/fast/inline/blocks-in-inline-layout4.html:
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::buildBidiParagraph):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleBlockContent):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

Canonical link: https://commits.webkit.org/302622@main